[gd_scene load_steps=22 format=2]

[ext_resource path="res://Actors/heros/hero_action/shield_recharge_action.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://objects/shield_source.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/projectiles/bullets/Bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/novas/Nova.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/hurtBoxArea2D/HurtBoxArea2D.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/weapons/hero_weapon.tscn" type="PackedScene" id=7]
[ext_resource path="res://Actors/heros/Hero.gd" type="Script" id=8]
[ext_resource path="res://Actors/heros/StatusHandler.gd" type="Script" id=9]
[ext_resource path="res://Actors/heros/hero_movement_handler.gd" type="Script" id=10]
[ext_resource path="res://objects/StateMachine/StateMachine.gd" type="Script" id=11]
[ext_resource path="res://Actors/heros/UIDebugState_machine.gd" type="Script" id=12]

[sub_resource type="Animation" id=10]
resource_name = "Damaged"
length = 0.43
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/damaged")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 34, 34 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
render_mode unshaded;
 
uniform float width : hint_range(0.0, 116.0);
uniform vec4 outline_color : hint_color;
uniform bool damaged = false;

void fragment()
{
    vec2 size = vec2(width) / vec2(textureSize(TEXTURE, 0));
   
    vec4 sprite_color = texture(TEXTURE, UV);
   
    float alpha = sprite_color.a;
    alpha += texture(TEXTURE, UV + vec2(0.0, -size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(size.x, -size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(size.x, 0.0)).a;
    alpha += texture(TEXTURE, UV + vec2(size.x, size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(0.0, size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(-size.x, size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(-size.x, 0.0)).a;
    alpha += texture(TEXTURE, UV + vec2(-size.x, -size.y)).a;
   
    vec3 final_color = mix(outline_color.rgb, sprite_color.rgb, sprite_color.a);
    COLOR = vec4(final_color, clamp(alpha, 0.0, 1.0));

	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (damaged == true){
		new_color = white_color;
		COLOR = new_color;
	}
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/width = 1.0
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/damaged = false

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.117647, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.984314, 0.984314, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0.984314, 0.984314, 1 )

[node name="Hero" type="KinematicBody2D" groups=[
"heroes",
]]
collision_layer = 8
collision_mask = 2
script = ExtResource( 8 )
base_hp = 100.0
base_shield = 20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damaged = SubResource( 10 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../UI")
update_rotation = false

[node name="Sprite" type="Sprite" parent="RemoteTransform2D"]
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 3 )
rotation = 1.57079
frames = SubResource( 5 )

[node name="HurtBoxArea2D" parent="." instance=ExtResource( 6 )]
team = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxArea2D"]
shape = SubResource( 4 )

[node name="ShieldRechargeAction" type="Node" parent="."]
script = ExtResource( 1 )

[node name="ShieldRegenCooldown" type="Timer" parent="ShieldRechargeAction"]
wait_time = 2.0
one_shot = true

[node name="HeroWeapon" parent="." instance=ExtResource( 7 )]
projectile_scene = ExtResource( 4 )
cooldown_time = 0.1

[node name="StatusStorage" type="Node2D" parent="."]
visible = false
script = ExtResource( 9 )

[node name="ShieldSource" parent="." instance=ExtResource( 3 )]
projectile_scene = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="HeroMovementHandler" type="Node2D" parent="."]
script = ExtResource( 10 )
_rotation_speed = 20

[node name="UI" type="Node2D" parent="."]

[node name="Control" type="Control" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -31.5
margin_top = -45.0
margin_right = 31.5
margin_bottom = -35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldProgressBar" type="ProgressBar" parent="UI/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 90.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthProgressBar" type="ProgressBar" parent="UI/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
value = 90.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugState_machine" type="VBoxContainer" parent="UI/Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThisHBoxContainer" type="HBoxContainer" parent="UI/Control/DebugState_machine"]
margin_right = 74.0
margin_bottom = 14.0

[node name="ThisState" type="Label" parent="UI/Control/DebugState_machine/ThisHBoxContainer"]
margin_right = 70.0
margin_bottom = 14.0
text = "this_state: "

[node name="Name" type="Label" parent="UI/Control/DebugState_machine/ThisHBoxContainer"]
margin_left = 74.0
margin_right = 74.0
margin_bottom = 14.0

[node name="LastHBoxContainer2" type="HBoxContainer" parent="UI/Control/DebugState_machine"]
margin_top = 18.0
margin_right = 74.0
margin_bottom = 32.0

[node name="LastState" type="Label" parent="UI/Control/DebugState_machine/LastHBoxContainer2"]
margin_right = 69.0
margin_bottom = 14.0
text = "last_state: "

[node name="LastName" type="Label" parent="UI/Control/DebugState_machine/LastHBoxContainer2"]
margin_left = 73.0
margin_right = 73.0
margin_bottom = 14.0

[node name="HeroArea" type="Area2D" parent="."]
monitoring = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeroArea"]
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
modulate = Color( 1, 0.0235294, 0.0235294, 1 )
cast_to = Vector2( 0, 3000 )
collision_mask = 4

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 11 )

[node name="StateMachineTimer" type="Timer" parent="StateMachine"]

[connection signal="hit_landed" from="HurtBoxArea2D" to="." method="_on_HurtBoxArea2D_hit_landed"]
[connection signal="timeout" from="ShieldRechargeAction/ShieldRegenCooldown" to="ShieldRechargeAction" method="_on_ShieldRegenCooldown_timeout"]
[connection signal="state_entered" from="StateMachine" to="UI/Control/DebugState_machine" method="_on_StateMachine_state_entered"]
